--- a/nnet.ipynb
+++ b/nnet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,8 +197,11 @@
     "def evaluate(model, val_data, loss_fn, params): \n",
     "    # Set model to evaluation mode\n",
     "    model.eval()\n",
+    "\n",
+    "    count = 0\n",
     "    \n",
-    "    loss = 0\n",
+    "    embedding_pt = torch.tensor(params['embedding'], requires_grad=False)\n",
+    "    V, K = params['embedding'].shape\n",
     "    \n",
     "    for example in val_data: \n",
     "        board, gold_word = example\n",
@@ -207,18 +210,86 @@
     "\n",
     "        board_embedding_pt = embedding_pt[board_pt].view(1, 2 * K) # 2 x 768\n",
     "        board_embedding_big = board_embedding_pt.expand(V, 2 * K) # V x (2 X 768)\n",
-    "        all_input = torch.concat([embedding_pt, board_embedding_big], dim=1) # (V x 1536)\n",
+    "\n",
+    "        # Add embedding for each vocab word to board_embedding_big\n",
+    "        all_input = torch.cat([embedding_pt, board_embedding_big], dim=1) # (V x 1536)\n",
     "        \n",
     "        output = model(all_input)\n",
     "        \n",
-    "        loss += loss_function(output, gold_word)"
+    "        idx = torch.argmax(output).tolist()\n",
+    "        print(idx)\n",
+    "        print(gold_word)\n",
+    "        \n",
+    "        if idx == gold_word: \n",
+    "            count += 1\n",
+    "            \n",
+    "    return (count/len(val_data))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 0\n",
+      "Epoch: 1\n",
+      "Epoch: 2\n",
+      "Epoch: 3\n",
+      "Epoch: 4\n",
+      "Epoch: 5\n",
+      "Epoch: 6\n",
+      "Epoch: 7\n",
+      "Epoch: 8\n",
+      "Epoch: 9\n",
+      "Epoch: 10\n",
+      "Epoch: 11\n",
+      "Epoch: 12\n",
+      "Epoch: 13\n",
+      "Epoch: 14\n",
+      "Epoch: 15\n",
+      "Epoch: 16\n",
+      "Epoch: 17\n",
+      "Epoch: 18\n",
+      "Epoch: 19\n",
+      "Epoch: 20\n",
+      "Epoch: 21\n",
+      "Epoch: 22\n",
+      "Epoch: 23\n",
+      "Epoch: 24\n",
+      "Epoch: 25\n",
+      "Epoch: 26\n",
+      "Epoch: 27\n",
+      "Epoch: 28\n",
+      "Epoch: 29\n",
+      "Epoch: 30\n",
+      "Epoch: 31\n",
+      "Epoch: 32\n",
+      "Epoch: 33\n",
+      "Epoch: 34\n",
+      "Epoch: 35\n",
+      "Epoch: 36\n",
+      "Epoch: 37\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-8e9fb6aacf4f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAdam\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.001\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss_function\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-14-426d300010b5>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(model, train_data, optimizer, loss_function, params)\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m         \u001b[0;31m# Backprop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m         \u001b[0;31m# Perform update using\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda3/lib/python3.6/site-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m    164\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    165\u001b[0m         \"\"\"\n\u001b[0;32m--> 166\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    167\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    168\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda3/lib/python3.6/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     97\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m     98\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 99\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m    100\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# Random seed for reproducible experiments\n",
     "torch.manual_seed(0)\n",
@@ -229,7 +300,7 @@
     "\n",
     "# Includes things like # of epochs, etc.\n",
     "params = {\n",
-    "    'num_epochs' : 20,\n",
+    "    'num_epochs' : 50,\n",
     "    'embedding' : bert_embedding\n",
     "}\n",
     "\n",
@@ -243,10 +314,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1985\n",
+      "[3240]\n",
+      "1985\n",
+      "[3158]\n",
+      "1985\n",
+      "[392]\n",
+      "1985\n",
+      "[793]\n",
+      "1985\n",
+      "[600]\n",
+      "1985\n",
+      "[3364]\n",
+      "1985\n",
+      "[2196]\n",
+      "1985\n",
+      "[15692]\n",
+      "1985\n",
+      "[2947]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaluate(model, val_data, loss_function, params)"
+   ]
   },
   {
    "cell_type": "code",
